--- a/mps/24-11-12-mps_currencies.ipynb
+++ b/mps/24-11-12-mps_currencies.ipynb
@@ -44,12 +44,24 @@
     "df = pd.read_parquet('data/currencies.parquet')\n",
     "print(df.head())\n",
     "\n",
+    "# create figures folder if not exists\n",
+    "!mkdir -p figures\n",
+    "\n",
     "# plot\n",
-    "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
-    "df['JPYUSD'].plot(ax=ax[0])\n",
-    "df.drop(columns='JPYUSD').plot(ax=ax[1])\n",
-    "ax[0].set_title('JPYUSD')\n",
-    "ax[1].set_title('Other currencies')\n",
+    "fig, ax0 = plt.subplots(figsize=(8, 3))\n",
+    "# plot each currency on the same axis except for JPY\n",
+    "for currency in df.columns:\n",
+    "    if currency != 'USDJPY':\n",
+    "        ax0.plot(df.index, df[currency], label=currency)\n",
+    "plt.legend(loc='upper left')\n",
+    "plt.ylabel('Exchange rat')\n",
+    "plt.xlabel('Date')\n",
+    "\n",
+    "ax1 = ax0.twinx()\n",
+    "ax1.plot(df.index, df['USDJPY'], label='USDJPY', color='green', ls='-.')\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.title('FX Rates Mid Price')\n",
+    "plt.savefig('figures/currencies.png', bbox_inches='tight', dpi=200)\n",
     "plt.show()\n"
    ]
   },
@@ -85,7 +97,11 @@
     "df = (df - df.mean()) / df.std()\n",
     "\n",
     "# plot\n",
-    "df.plot()"
+    "fig = plt.figure(figsize=(8, 3))\n",
+    "df.plot(ax=plt.gca())\n",
+    "plt.title('Log Returns')\n",
+    "plt.savefig('figures/log_returns.png', bbox_inches='tight', dpi=200)\n",
+    "plt.show()"
    ]
   },
   {
@@ -95,7 +111,16 @@
    "outputs": [],
    "source": [
     "# plot histograms\n",
-    "df.hist(bins=1000, figsize=(10, 3))\n",
+    "df.hist(bins=1000, figsize=(8, 3))\n",
+    "# color each histogram in a different color\n",
+    "colors = ['black', 'red', 'blue', 'green']\n",
+    "for i, ax in enumerate(plt.gcf().axes):\n",
+    "    for bar in ax.patches:\n",
+    "        bar.set_facecolor(colors[i])\n",
+    "\n",
+    "plt.suptitle('Log Returns Histograms')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('figures/log_ret_hists.png', bbox_inches='tight', dpi=200)\n",
     "plt.show()"
    ]
   },
@@ -185,11 +210,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df.columns.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%matplotlib inline\n",
     "\n",
-    "for i, binary_feature in enumerate(bin_feat_dicts):\n",
-    "    fig = plot_histogram(binary_feature, figsize=(10, 3), title=df.columns[i], bar_labels=False)\n",
-    "    plt.show()"
+    "fig = plot_histogram(bin_feat_dicts, figsize=(8, 3), legend=df.columns.values.tolist(), bar_labels=False)\n",
+    "plt.ylabel('Probability')\n",
+    "plt.xlabel('Binary Strings')\n",
+    "plt.savefig('figures/binary_hists.png', bbox_inches='tight', dpi=200)\n",
+    "plt.show()"
    ]
   },
   {
@@ -238,10 +274,11 @@
    "outputs": [],
    "source": [
     "loss = np.array(m.Loss)\n",
+    "plt.figure(figsize=(6, 2))\n",
     "plt.plot(loss)\n",
     "plt.xlabel('Iteration')\n",
-    "plt.ylabel('Loss')\n",
-    "plt.yscale('log')\n",
+    "plt.ylabel('Negative Log Likelihood')\n",
+    "plt.savefig('figures/loss.png', bbox_inches='tight', dpi=200)\n",
     "plt.show()"
    ]
   },
@@ -278,7 +315,10 @@
     "%matplotlib inline\n",
     "\n",
     "for i, generated_feature in enumerate(gen_samples_dicts):\n",
-    "    fig = plot_histogram([bin_feat_dicts[i], generated_feature], figsize=(10, 3), title=df.columns[i], bar_labels=False)\n",
+    "    fig = plot_histogram([bin_feat_dicts[i], generated_feature], figsize=(8, 3), legend=['Target', 'Generated'], title=df.columns[i], bar_labels=False)\n",
+    "    plt.ylabel('Probability')\n",
+    "    plt.xlabel('Binary Strings')\n",
+    "    plt.savefig(f'figures/{df.columns[i]}_result.png', bbox_inches='tight', dpi=200)\n",
     "    plt.show()"
    ]
   },
