--- a/mps/24-11-12-mps_currencies.ipynb
+++ b/mps/24-11-12-mps_currencies.ipynb
@@ -288,9 +288,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# generate 100 samples from the trained MPS\n",
-    "samples_gen = np.full((1000, df_binary.shape[1]), np.nan)\n",
-    "for i in range(1000):\n",
+    "# generate samples from the trained MPS\n",
+    "print(df_binary.shape[0])\n",
+    "n_samples = df_binary.shape[0]\n",
+    "samples_gen = np.full((n_samples, df_binary.shape[1]), np.nan)\n",
+    "for i in range(n_samples):\n",
     "    samples_gen[i] = m.generate_sample_1()"
    ]
   },
